feat(theme): add dark mode config

--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/seo": "2.0.0-rc.18",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@pinia/nuxt": "^0.5.3",
     "nuxt": "^3.12.4",
     "vue": "latest"
+  },
+  "devDependencies": {
+    "@iconify/vue": "^4.1.2",
+    "sass-embedded": "^1.77.8"
   }
 }
